# talk-booking

./: .gitignore  .gitlab-ci.yml  README.md
ci_cd/docker/: Dockerfile
ci_cd/python/: Dockerfile
infrastructure/global/vpc/: ci-cd.yml  ci_cd.yml  domain.tf  main.tf  network.tf  outputs.tf  security_groups.tf  variables.tf
infrastructure/modules/talk-booking-service/: alarms.tf  database.tf  domain.tf  ecr.tf  ecs.tf  ecs_service.tf  iam.tf  load_balancer.tf  logs.tf  outputs.tf  variables.tf
infrastructure/talk-booking-service/: ci-cd.yml
infrastructure/talk-booking-service/development/: main.tf  output.tf  variables.tf
infrastructure/talk-booking-service/production/: main.tf  variables.tf
libraries/auto_reject_talk/: .flake8  ci-cd.yml  pyproject.toml
libraries/auto_reject_talk/auto_reject_talk/: __init__.py  reject.py
libraries/auto_reject_talk/tests/: test_reject.py
services/talk_booking/: .coveragerc  Dockerfile  alembic.ini  ci-cd.yml  ci_cd.yml  deploy.py  prestart.sh  pyproject.toml  run.sh
services/talk_booking/alembic/: env.py
services/talk_booking/alembic/versions/: 4ad5a094c40e_initial_migration.py
services/talk_booking/database/: session.py  talk_request_db.py
services/talk_booking/models/: __init__.py  address.py  talk_request.py
services/talk_booking/tests/: conftest.py  pytest.ini
services/talk_booking/tests/e2e/: test_accept_request_flow.py  test_health_check.py  test_reject_request_flow.py
services/talk_booking/tests/integration/test_database/: test_talk_request_db.py
services/talk_booking/tests/integration/test_web_app/: test_main.py
services/talk_booking/tests/unit/test_models/: test_address.py  test_talk_request.py
services/talk_booking/web_app/: backend_pre_start.py  config.py  main.py  migrations.py  requests.py  responses.py
